--- a/TeamProject/Content/Site.css
+++ b/TeamProject/Content/Site.css
@@ -14,6 +14,18 @@
 }
 
 /*for court timeslots*/
+.timeSlots td div .icon {
+    color: #058035;
+    
+}
+
+.timeSlots td div {
+    display: inline-block;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 100%;
+    cursor: pointer;
+}
 .timeSlots td, .timeSlotsBooking td {
     margin: 5px;
     font-weight: bold;
@@ -21,66 +33,14 @@
     width: 12.5%
 }
 
-    .timeSlots td div.active {
-        display: inline-block;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        width: 100%;
-        border-radius: .25em;
-        border: 1px solid rgba(0,0,0,.125);
-        font-weight: normal;
-        text-align: center;
-        color: blue;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        background: #deee86;
-    }
-
-    .timeSlots td div:hover {
-        cursor: pointer;
-    }
-
-    .timeSlots td div:not(.active) {
-        display: inline-block;
-        background: #F0F0F0;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        width: 100%;
-        border-radius: .25em;
-        border: 1px solid rgba(0,0,0,.125);
-        font-weight: normal;
-        text-align: center;
-        box-shadow: none;
-    }
+.timeSlots td div:hover {
+    cursor: pointer;
+}
     
 .timeslot-header .fas:hover {
     cursor: pointer;
 }
 
-/*.timeSlots td a[set] {
-    display: inline-block;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    width: 100%;
-    border-radius: .25em;
-    border: 1px solid rgba(0,0,0,.125);
-    font-weight: normal;
-    text-align: center;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    background: #deee86;
-}
-
-.timeSlots td a[notset] {
-    display: inline-block;
-    background: #F0F0F0;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    width: 100%;
-    border-radius: .25em;
-    border: 1px solid rgba(0,0,0,.125);
-    font-weight: normal;
-    text-align: center;
-    box-shadow: none;
-}*/
 
 
 /*form bookings*/
