fix bug when clicked to remove or add update div with new id or zero id

--- a/TeamProject/Areas/Admin/Views/TimeSlots/Index.cshtml
+++ b/TeamProject/Areas/Admin/Views/TimeSlots/Index.cshtml
@@ -90,7 +90,8 @@
                     accepts: "application/json",
                     contentType: "application/json",
                     data: JSON.stringify(data),
-                    success: function () {
+                    success: function (result) {
+                        $timeslot.data('id', result);
                         $timeslot.toggleClass('active');
                         $timeslot.find('i').toggleClass('d-none');
                     }
