--- a/TeamProject/Areas/Admin/Views/TimeSlots/Index.cshtml
+++ b/TeamProject/Areas/Admin/Views/TimeSlots/Index.cshtml
@@ -26,7 +26,7 @@
     @foreach (var item in Model)
     {
         <tr data-hour="@item.Hour">
-            <td>
+            <td class="align-middle">
                 @Html.DisplayFor(modelItem => item.Hour)
             </td>
             @for (var i = 1; i <= 7; i++)
