Generae QR Code from book key

--- a/TeamProject/Views/UserBooking/Index.cshtml
+++ b/TeamProject/Views/UserBooking/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-@if(Model.Count() == 0)
+@if (Model.Count() == 0)
 {
     <br />
     <h1 class="text-center"> U have no bookings yet. </h1>
@@ -12,17 +12,23 @@
 
 @foreach (var booking in Model)
 {
-<div class=" border border-success rounded shadow-lg mt-3 text-center">
-    <br />
+<div class="row border border-success rounded shadow-lg mt-3 text-center">
+    @*<div class="col-1 qrcode p-3">
+        <img style="height:128px" src="data:image/jpeg;base64,@booking.QrCodeImageAsBase64()">
+    </div>*@
+    <div class="col">
+        <br />
 
-    <div> You have booked <strong> @booking.Court.Name </strong> at <strong>@booking.BookedAt</strong>.</div>
-    <br />
-    <span> You can find the court information @Html.ActionLink("here.", "Details", "Courts", new { id = booking.CourtId }, null) </span>
-    <br />
-    <br />
-    <span> @Html.ActionLink("Click for Booking Info", "Confirmed", "Courts", new { BookKey = booking.BookKey }, null)</span>
-    <br />
-    <br />
+        <div> You have booked <strong> @booking.Court.Name </strong> at <strong>@booking.BookedAt</strong>.</div>
+        <br />
+        <span> You can find the court information @Html.ActionLink("here.", "Details", "Courts", new { id = booking.CourtId }, null) </span>
+        <br />
+        <br />
+        <span> @Html.ActionLink("Click for Booking Info", "Confirmed", "Courts", new { BookKey = booking.BookKey }, null)</span>
+        <br />
+        <br />
+    </div>
 </div>
 }
+
 
