--- a/TeamProject/Views/Courts/Confirmed.cshtml
+++ b/TeamProject/Views/Courts/Confirmed.cshtml
@@ -3,26 +3,28 @@
 @{
     ViewBag.Title = "Confirmed";
 }
-<div class="container-fluid text-center" style="height:500px;">
+<div class="text-center">
+
+    <br />
+    <br /><br /><br />
+    <h2>@Model.User.UserName, thanks for booking.</h2>
+    <br />
+    <div> You have book <strong> @Html.ActionLink(Model.Court.Name, "Details", "Courts", new { id = Model.CourtId }, null) </strong> at <strong>@Model.BookedAt</strong></div>
+    <br />
+    <span>Your booking number is <strong>@Model.BookKey</strong></span>
     <div>
-        <br />
-        <br /><br /><br />
-        <h2>@Model.User.UserName, thanks for booking.</h2>
-        <br />
-        <div> You have book <strong> @Html.ActionLink(Model.Court.Name, "Details", "Courts", new { id = Model.CourtId }, null) </strong> at <strong>@Model.BookedAt</strong></div>
-        <br />
-        <span>Your booking number is <strong>@Model.BookKey</strong></span>
-        <br />
-        <br />
-        <span>You can find the Court at @ViewBag.address</span>
-        <br />
-        <br />
-        <span class="text-center"><strong>Cost :</strong> @Model.Court.Price&euro;</span>
-    </div>   
+        <img style="height:256px" src="data:image/jpeg;base64,@Model.QrCodeImageAsBase64()">
+    </div>
+    <br />
+    <br />
+    <span>You can find the Court at @ViewBag.address</span>
+    <br />
+    <br />
+    <span class="text-center"><strong>Cost :</strong> @Model.Court.Price&euro;</span>
 </div>
 <div class="col">
     <div class="col-md-6">
-        @Html.ActionLink("Download as pdf","GetHTMLPageAsPDF",new { BookKey = Model.BookKey },null)
+        @Html.ActionLink("Download as pdf", "GetHTMLPageAsPDF", new { BookKey = Model.BookKey }, null)
     </div>
 </div>
 
