Get Domain for QR Code Link

--- a/TeamProject/Areas/Admin/Views/Bookings/Index.cshtml
+++ b/TeamProject/Areas/Admin/Views/Bookings/Index.cshtml
@@ -205,7 +205,7 @@
                         .html(html);
 
                     // show clicked tab
-                    $($('.tab-selection a.active').attr('container')).removeClass('d-none');
+                    $(`#${tabContainer}-container`).removeClass('d-none');
                 });
             }
 
