moved not model entities in the ModelsView folder

--- a/TeamProject/Areas/Admin/Views/BranchFacilities/ChooseFacilities.cshtml
+++ b/TeamProject/Areas/Admin/Views/BranchFacilities/ChooseFacilities.cshtml
@@ -1,4 +1,4 @@
-﻿@model TeamProject.Models.FacilityFormModel
+﻿@model TeamProject.ModelsViews.FacilityFormModel
 @{
     ViewBag.Title = "Choose Facilities";
 }
